<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="molona.miempresa.bank_time_personal_2017.ProfessionalsheetActivity">




    <EditText
        android:id="@+id/txtprofuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="236dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtprofmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64"
    tools:text="@string/txtprofuser" />
    <EditText
                android:id="@+id/txtprofmail"
                tools:text="@string/txtprofmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/txtprofpassword" />


    <EditText
        android:id="@+id/txtprofpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textVisiblePassword"
        app:layout_constraintBottom_toTopOf="@+id/txtprofpostalcode"
        app:layout_constraintHorizontal_bias="0.502"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/txtprofpassword" />

    <EditText
                android:id="@+id/txtprofpostalcode"
                tools:text="@string/txtprofpostalcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/txtprofmunicipio" />

    <EditText
        android:id="@+id/txtprofmunicipio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtprofphone"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/txtprofmunicipio" />

    <EditText
                android:id="@+id/txtprofphone"
                tools:text="@string/txtprofphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/txtprofprofesion" />

    <EditText
                android:id="@+id/txtprofprofesion"
                tools:text="@string/txtprofprofesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/txtprofdate" />
    <EditText
        android:id="@+id/txtprofdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="85dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnprofregister" />

    <Button
                android:id="@+id/btnprofregister"
                tools:text="@string/btnprofregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />


</android.support.constraint.ConstraintLayout>
